--- a/board/src/main/resources/application.yml
+++ b/board/src/main/resources/application.yml
@@ -1,14 +1,16 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://host.docker.internal/~/board;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://mysql:3306/board
+    username: root
+    password: 1q2w3e4r
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    generate-ddl: true
